--- a/styles.css
+++ b/styles.css
@@ -22,20 +22,12 @@
   --clr-neutral-100: #fff;
   --clr-neutral-200: hsl(202, 11%, 66%);
   --clr-neutral-400: hsl(212, 10%, 33%);
+  --clr-neutral-500: rgba(158, 171, 178, 0.1);
 
   --clr-primary: hsl(171, 66%, 44%);
   --clr-secondary: hsl(233, 100%, 69%);
 
   --br: 1rem;
-}
-
-@media (min-width: 40em) {
-  :root {
-    /* Large screen font-sizes */
-    --fs-300: 1.125rem;
-    --fs-700: 2.25rem;
-    --fs-800: 2.875rem;
-  }
 }
 
 /* reset */
@@ -90,6 +82,8 @@ h3 {
 
 .sub-title {
   color: var(--clr-neutral-300);
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .main-title {
@@ -117,22 +111,61 @@ h3 {
 }
 
 .flow-content > * + * {
-  margin-top: 1rem;
+  margin-top: var(--flow-spacer, 1em);
+}
+
+.flow-content--lg > * + * {
+  margin-top: 3.5em;
+}
+
+.l-space {
+  margin-top: 5em;
+  margin-bottom: 0;
+}
+
+.m-space {
+  margin-top: 3em;
+  margin-bottom: 0;
+}
+
+/* .m-bottom {
+  margin-bottom: 2em;
+} */
+
+section,
+footer {
+  padding: 5rem 0;
 }
 
 /* General Lay-out */
 
 .main__header {
   background-image: url(/images/bg-header-mobile.png);
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   background-size: cover;
+  /* border: solid;
+  margin-bottom: 10rem;
+  height: 250px; */
+}
+
+/* .main__content {
+  position: relative;
+  top: 5rem;
+} */
+
+.footer {
+  background-color: var(--clr-neutral-500);
+}
+
+.footer__logo {
+  width: 55px;
 }
 
 /* Components */
 
 .btn {
-  border-radius: 1rem;
-  padding: 0.5rem 1rem;
+  border-radius: 2rem;
+  padding: 1.1875rem 1rem;
   outline: none;
   background-color: var(--accent, var(--clr-primary));
   color: var(--clr-neutral-100);
@@ -146,6 +179,32 @@ h3 {
 .container {
   max-width: 69.375rem;
   margin: 0 auto;
-  border: solid;
   padding: 0 1.5rem;
+}
+
+.split {
+  display: block;
+}
+
+@media (min-width: 40em) {
+  :root {
+    /* Large screen font-sizes */
+    --fs-300: 1.125rem;
+    --fs-700: 2.25rem;
+    --fs-800: 2.875rem;
+  }
+
+  .btn {
+    width: 20%;
+  }
+
+  .split {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .container {
+    padding: 0;
+  }
 }
