--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ h3 {
 section,
 footer,
 .client__logo {
-  padding: 3rem 0 2rem 0;
+  padding: 3rem 0 3rem 0;
 }
 
 .container {
@@ -278,6 +278,10 @@ svg:hover {
   .container {
     padding-left: 0;
     padding-right: 0;
+  }
+
+  .main__header {
+    background-image: url(/images/bg-header-desktop.png);
   }
 
   .main__content {
